thêm search thêm pagi

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -131,22 +131,22 @@
 <nav class="navbar navbar-default">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a routerLink="/" class="navbar-brand">Recipe Book</a>
+      <a routerLink="/" class="navbar-brand">Ghiền quán</a>
     </div>
 
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
-        <li routerLinkActive="active"><a routerLink="/recipes">Recipes</a></li>
+        <li routerLinkActive="active"><a routerLink="/recipes">Món</a></li>
         <li routerLinkActive="active"><a routerLink="/shopping-list">Shopping List</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li class="dropdown" appDropdown>
+        <!-- <li class="dropdown" appDropdown>
           <a style="cursor: pointer;" class="dropdown-toggle" role="button">Manage <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><a style="cursor: pointer;">Save Data</a></li>
             <li><a style="cursor: pointer;">Fetch Data</a></li>
           </ul>
-        </li>
+        </li> -->
         <li style="vertical-align: center">
           <div *ngIf="auth.user$ | async; then authenticated else guest"></div>
           <ng-template #guest>
@@ -158,9 +158,12 @@
           <ng-template #authenticated>
             <form class="form-inline my-2 my-lg-0" *ngIf="auth.user$ | async as user">
               <a routerLink="/user/profile"><img class="avatar mr-2" [src]="user.photoURL"></a>
-              <a class="btn btn-outline-light my-2 my-sm-0" (click)="auth.signOut()">
+              <a class="btn btn-outline-light" (click)="auth.signOut()">
                 Logout
-                <i class="fas fa-sign-out-alt" aria-hidden="true"></i>
+                <!-- <i class="fas fa-sign-out-alt" aria-hidden="true"></i> -->
+                
+                <!-- <span class="glyphicon glyphicon-icon-signout" aria-hidden="true"></span> -->
+                
               </a>
             </form>
           </ng-template>
