--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -1,15 +1,24 @@
 <div class="row">
   <div class="col-xs-12">
-    <button class="btn btn-success" (click)="onNewRecipe()">New Recipe</button>
+    <button class="btn btn-success" (click)="onNewRecipe()">Thêm món</button>
+  </div>
+</div>
+<hr>
+<div class="row">
+  <div class="col-md-12">
+    <input type="text" name="search" [(ngModel)]="searchvalue" class="form-control" placeholder="Tìm kiếm">
   </div>
 </div>
 <hr>
 <div class="row">
   <div class="col-xs-12">
     <app-recipe-item
-      *ngFor="let recipeEl of recipes$ | async; let i = index"
+      *ngFor="let recipeEl of recipes$ | async | recipesearch: searchvalue | paginate:{ itemsPerPage: 5, currentPage: p }; let i = index"
       [recipe]="recipeEl"
       [index]="recipeEl.recipeid"></app-recipe-item>
+      <hr>
+      <pagination-controls (pageChange)="p = $event"></pagination-controls>
   </div>
+  
 </div>
 
