--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -14,6 +14,11 @@
 </div>
 <div class="row">
   <div class="col-xs-12">
+    <h1>{{ recipe.price | currency: 'VND' }}</h1>
+  </div>
+</div>
+<div class="row">
+  <div class="col-xs-12">
     <div
       class="btn-group"
       appDropdown>
