--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -25,6 +25,18 @@
       <div class="row">
         <div class="col-xs-12">
           <div class="form-group">
+            <label for="price">Price</label>
+            <input
+              type="number"
+              id="price"
+              formControlName="price"
+              class="form-control">
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-xs-12">
+          <div class="form-group">
             <label for="imagePath">Image URL</label>
             <input
               type="text"
